[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/designer_ammo_slot_widget.gd" id="1_script"]

[node name="DesignerAmmoSlotWidget" type="PanelContainer"]
custom_minimum_size = Vector2(0, 80)
offset_right = 250.0
offset_bottom = 80.0
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.737255, 0.831373, 1)
theme_override_font_sizes/font_size = 12
text = "AMMUNITION BAY"

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="IconLabel" type="Label" parent="MarginContainer/VBoxContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 24
text = "â˜–"

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBox/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "EMPTY"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/HBox/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 10
text = "No rounds loaded"
